--- a/Beskonačni Toranj.csproj
+++ b/Beskonačni Toranj.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="ProjectilShotByBoss.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +62,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectil.cs" />
+    <Compile Include="ProjectilShotByPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
