--- a/Beskonačni Toranj.csproj
+++ b/Beskonačni Toranj.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="ProjectilShotByBoss.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
