--- a/Beskonačni Toranj.csproj
+++ b/Beskonačni Toranj.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -147,6 +148,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bossPicture.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\highscoreImage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\playerImage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
