--- a/Beskonačni Toranj.csproj
+++ b/Beskonačni Toranj.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Coin.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="ProjectilShotByBoss.cs" />
     <Compile Include="Form1.cs">
