--- a/Beskonačni Toranj.csproj
+++ b/Beskonačni Toranj.csproj
@@ -34,8 +34,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,12 +48,19 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Coin.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="HighscoreUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HighscoreUserControl.Designer.cs">
+      <DependentUpon>HighscoreUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProjectilShotByBoss.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -69,6 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HighscoreUserControl.resx">
+      <DependentUpon>HighscoreUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -162,6 +175,7 @@
     <Content Include="Resources\coin.png" />
     <Content Include="Resources\enemy.jpg" />
     <Content Include="Resources\enemy_jotaro.jpg" />
+    <None Include="Resources\highscoreList.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
